--- a/PetProject/Storyboards/Base.lproj/Main.storyboard
+++ b/PetProject/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PGQ-tR-AV4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Po7-XL-U4D">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -29,7 +29,7 @@
                                             <color key="baseBackgroundColor" systemColor="systemYellowColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <segue destination="1nA-Ig-JOx" kind="show" identifier="ilnarSegue" id="Y67-rm-lwM"/>
+                                            <segue destination="O5Y-Nm-qse" kind="presentation" identifier="ilnarSegue" modalPresentationStyle="fullScreen" id="Y67-rm-lwM"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftv-gq-Ur8">
@@ -41,7 +41,7 @@
                                             <color key="baseBackgroundColor" systemColor="systemBlueColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <segue destination="1nA-Ig-JOx" kind="show" identifier="showAstafiev" id="Zjb-YK-d6n"/>
+                                            <segue destination="O5Y-Nm-qse" kind="presentation" identifier="showAstafiev" modalPresentationStyle="fullScreen" id="Zjb-YK-d6n"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -61,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oT9-1O-NVz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4767.1999999999998" y="-260.41979010494754"/>
+            <point key="canvasLocation" x="4892" y="-260"/>
         </scene>
         <!--Вопрос №-->
         <scene sceneID="rKT-O9-jJd">
@@ -158,7 +158,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CY9-bk-HHn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5492" y="-259.52023988005999"/>
+            <point key="canvasLocation" x="6431.1999999999998" y="-259.52023988005999"/>
         </scene>
         <!--Результат-->
         <scene sceneID="vmg-gG-6NZ">
@@ -197,25 +197,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nCU-y8-i5P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Sum-tw-rg1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="6290.3999999999996" y="-260.41979010494754"/>
+            <point key="canvasLocation" x="7229.6000000000004" y="-260.41979010494754"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="2m3-xG-smP">
+        <scene sceneID="SW9-WN-JVG">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ado-mb-doP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PGQ-tR-AV4" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O5Y-Nm-qse" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aiP-Ar-sgB">
+                    <navigationItem key="navigationItem" id="5Ql-2V-oUZ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BA9-QH-l5b">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Po7-XL-U4D" kind="relationship" relationship="rootViewController" id="uns-b6-m96"/>
+                        <segue destination="1nA-Ig-JOx" kind="relationship" relationship="rootViewController" id="TAZ-Da-s1Q"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eYv-ZW-IxM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4020" y="-260"/>
+            <point key="canvasLocation" x="5665" y="-260"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
